# urdf_vis

./: CMakeLists.txt  package.xml
launch/: display.launch
meshes/birdbot/: left_femur_link.STL  left_foot_link.STL  left_pelvis_link.STL  left_tibia_link.STL  right_femur_link.STL  right_foot_link.STL  right_pelvis_link.STL  right_tibia_link.STL
meshes/birdbot_v00/: left_femur_link.STL  left_foot_link.STL  left_pelvis_link.STL  left_tibia_link.STL  right_femur_link.STL  right_foot_link.STL  right_pelvis_link.STL  right_tibia_link.STL
urdf/: birdbot_v0.0.urdf  birdbot_v0.1.urdf  birdbot_v0.2.urdf  birdbot_v00.urdf  birdbot_v01.urdf  birdbot_v02.urdf  bolt.urdf  urdf_vis.py
